--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="projects-inner">
           <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
             <div class="project-tile">
-                <img src="https://github.com/jaydinho/Images/blob/master/Screen%20Shot%202019-04-15%20at%2023.29.04.png?raw=true" alt="Exercise Timer">
+                <img src="/ExerciseTimerScreenshot.png">
                 <div class="project-tile-text"> 
                   <h4>Exercise Timer</h4>
                   <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
