--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Jason Short
   </title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" href="JasonShortCSS.css">
+  <link rel="stylesheet" href="css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 
@@ -36,7 +36,7 @@
         <div class="projects-inner">
           <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
             <div class="project-tile">
-                <img src="/ExerciseTimerScreenshot.png">
+                <img src="Images/ExerciseTimerScreenshot.png">
                 <div class="project-tile-text"> 
                   <h4>Exercise Timer</h4>
                   <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
