--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Jason Short
   </title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="CSS/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 
