--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="about-inner">
         <h1 id="welcome-section">Jason Short</h1>
         <h3>Aspiring Web Developer</h3>
-        <a href="https://github.com/jaydinho/CV/raw/master/Jason%20Short%20CV.pdf" download="Jason_Short_CV">
+        <a href="Documents/JasonShortCV.pdf" download="Jason_Short_CV">
           <button class="button-one">Download CV</button>
         </a>  
       </div>
