Added Blackjack game (unstyled)
Game functions but basic styling only.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,25 @@
         <h2 id="projects">Projects</h2>
         <p>I'm at the very beginning of my coding journey, but will be adding more projects soon!</p>
         <div class="projects-inner">
-          <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
+          <a href="blackjack/index.html" target="_blank">
             <div class="project-tile">
-                <img src="Images/ExerciseTimerScreenshot.png">
-                <div class="project-tile-text"> 
-                  <h4>Exercise Timer</h4>
-                  <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
+              <img src="Images/BlackjackScreenshot.png">
+              <div class="project-tile-text"> 
+                <h4>Blackjack Game</h4>
+                <p>(In Progress - Currently unstyled.) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
               </div>
             </div>
           </a>
+          <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
+            <div class="project-tile">
+              <img src="Images/ExerciseTimerScreenshot.png">
+              <div class="project-tile-text"> 
+                <h4>Exercise Timer</h4>
+                <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
+              </div>
+            </div>
+          </a>
+          <!--
           <div class="project-tile">
             <div class="coming-soon">
               <p>COMING SOON</p>
@@ -52,6 +62,16 @@
               <p>Come back soon to see some new creations.</p>
             </div>  
           </div>
+          <div class="project-tile">
+            <div class="coming-soon">
+              <p>COMING SOON</p>
+            </div>
+            <div class="project-tile-text"> 
+              <h4>Exciting New Project</h4>
+              <p>Come back soon to see some new creations.</p>
+            </div>  
+          </div>
+          -->
         </div>
       </div>
     </div>
