Update - Anchor tag error fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2 id="projects">Projects</h2>
         <p>I'm at the very beginning of my coding journey, but will be adding more projects soon!</p>
         <div class="projects-inner">
-          <a href="blackjack/index.html" target="_blank">
+          <a href="Blackjack/index.html" target="_blank">
             <div class="project-tile">
               <img src="Images/BlackjackScreenshot.png">
               <div class="project-tile-text"> 
