Fixed Syntax Error
Same problem as before when the same name was used for a variable and ID

--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -20,9 +20,9 @@
         </div>
         
         <div id="button-container">
-            <button id="start" class="button">New Game</button>
-            <button id="hit" class="button">Hit</button>
-            <button id="stay" class="button">Stay</button>
+            <button id="start-button" class="button">New Game</button>
+            <button id="hit-button" class="button">Hit</button>
+            <button id="stay-button" class="button">Stay</button>
         </div>    
     </div>
 
