Update - Responsive design
Added two breakpoints to make the site display correectly on mobile and tablet.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     Jason Short
   </title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="CSS/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
@@ -89,7 +90,7 @@
   <footer>
     <p>Looking for an apprentice web developer?</p>
     <a href="mailto:jasonshort1990@gmail.com?Subject=Job%20Offer" target="_top">
-      <button class="button-one">Contact Me</button>
+      <button class="button-footer">Contact Me</button>
     </a>  
   </footer>
   
