--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <script src="https://kit.fontawesome.com/084fdc9c62.js"></script>
 </head>
