--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <title>
     Jason Short
   </title>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#449bb5"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="shortcut icon" href="./Images/favicon.ico"/>
   <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <script src="https://kit.fontawesome.com/084fdc9c62.js"></script>
