Update - Added meta description tags

--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="Description" content="Blackjack game">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
