--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>
     Jason Short
   </title>
+  <meta name="Description" content="Personal portfolio of Jason Short, front end web developer.">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#449bb5"/>
