Update - Added alt attributes to images

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="projects-inner flex--row">
           <a href="Blackjack/index.html" target="_blank">
             <div class="project-tile flex--column">
-              <img src="Images/BlackjackScreenshot.png">
+              <img src="Images/BlackjackScreenshot.png" alt="Blackjack game">
               <div class="project-tile-text"> 
                 <h4>Blackjack Game</h4>
                 <p>(In Progress) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
@@ -109,7 +109,7 @@
           </a>
           <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
             <div class="project-tile">
-              <img src="Images/ExerciseTimerScreenshot.png">
+              <img src="Images/ExerciseTimerScreenshot.png" alt="Excercise Timer">
               <div class="project-tile-text"> 
                 <h4>Exercise Timer</h4>
                 <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
