--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 
 <head>
   <title>
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#449bb5"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
   <link rel="shortcut icon" href="./Images/favicon.ico"/>
   <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
