--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="projects-inner flex--row">
           <a href="Blackjack/index.html" target="_blank">
             <div class="project-tile flex--column">
-              <img src="Images/BlackjackScreenshot.png" alt="Blackjack game">
+              <img src="Images/BlackjackScreenshot.png" alt="Blackjack Game">
               <div class="project-tile-text"> 
                 <h4>Blackjack Game</h4>
                 <p>(In Progress) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
