--- a/index.html
+++ b/index.html
@@ -102,23 +102,37 @@
         <p class="projects__text">I'm at the very beginning of my coding journey, but will be adding more projects soon!</p>
         <div class="projects-inner flex--row">
           <a href="Blackjack/index.html" target="_blank">
-            <div class="project-tile flex--column">
+            <div class="project-tile project-tile--green flex--column">
               <img src="Images/BlackjackScreenshot.png" alt="Blackjack Game">
-              <div class="project-tile-text"> 
-                <h4>Blackjack Game</h4>
-                <p>(In Progress) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
+              <div class="project-tile__overlay"> 
+                <p class="project-tile-text">(In Progress) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
               </div>
             </div>
           </a>
           <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
             <div class="project-tile">
               <img src="Images/ExerciseTimerScreenshot.png" alt="Excercise Timer">
-              <div class="project-tile-text"> 
-                <h4>Exercise Timer</h4>
-                <p>Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
+              <div class="project-tile__overlay" > 
+                <p class="project-tile-text" >Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
               </div>
             </div>
           </a>
+            <div class="project-tile project-tile--purple">
+              <div class="coming-soon">
+                <p>COMING SOON</p>
+              </div>
+              <div class="project-tile__overlay" > 
+                <p class="project-tile-text" >Come back soon to see some new creations.</p>
+              </div>
+            </div>
+            <div class="project-tile project-tile--orange">
+                <div class="coming-soon">
+                  <p>COMING SOON</p>
+                </div>
+                <div class="project-tile__overlay" > 
+                  <p class="project-tile-text" >Come back soon to see some new creations.</p>
+                </div>
+              </div>
           <!--
           <div class="project-tile">
             <div class="coming-soon">
