Update - Skills table layout fix

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       
         <h2 id="skills"></h2>
         <div class="skills flex--row flex--centered">
-          <div class="skills__column skills__column--first flex--column flex--centered">
+          <div class="skills__column skills__column--first flex--column">
             <i class="far fa-file-code icon"></i>
             <p class="skills__title">HTML/CSS</p>
             <p class="skills__subtitle">What I know so far:</p>
@@ -58,7 +58,7 @@
               <li class="skills__list">Bootstrap</li>
             </ul>
           </div>
-          <div class="skills__column skills__column--middle flex--column flex--centered">
+          <div class="skills__column skills__column--middle flex--column">
             <i class="fab fa-js-square icon"></i>
             <p class="skills__title">JavaScript</p>
             <p class="skills__subtitle">What I know so far:</p>
@@ -75,10 +75,10 @@
               <li class="skills__list">jQuery</li>
              </ul> 
             </div>
-          <div class="skills__column skills__column--last skills__column--right flex--column flex--centered">
+          <div class="skills__column skills__column--last skills__column--right flex--column">
               <i class="fas fa-tools icon icon--tools"></i>
             <p class="skills__title">Tools</p>
-            <p class="skills__subtitle">Developer software used:</p>
+            <p class="skills__subtitle">Dev software used:</p>
             <ul>
               <li class="skills__list">Visual Studio Code</li>
               <li class="skills__list">Sublime</li>
@@ -133,26 +133,6 @@
                   <p class="project-tile-text" >Come back soon to see some new creations.</p>
                 </div>
               </div>
-          <!--
-          <div class="project-tile">
-            <div class="coming-soon">
-              <p>COMING SOON</p>
-            </div>
-            <div class="project-tile-text"> 
-              <h4>Exciting New Project</h4>
-              <p>Come back soon to see some new creations.</p>
-            </div>  
-          </div>
-          <div class="project-tile">
-            <div class="coming-soon">
-              <p>COMING SOON</p>
-            </div>
-            <div class="project-tile-text"> 
-              <h4>Exciting New Project</h4>
-              <p>Come back soon to see some new creations.</p>
-            </div>  
-          </div>
-          -->
         </div>
       </div>
     </div>
