Update - Made folder names consistent
Made all folder names lower case

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#449bb5"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <link rel="shortcut icon" href="./Images/favicon.ico"/>
+  <link rel="shortcut icon" href="./images/favicon.ico"/>
   <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   <script src="https://kit.fontawesome.com/084fdc9c62.js"></script>
@@ -32,7 +32,7 @@
       <div class="about flex--column flex--centered">
         <h1 class="about__title">Jason Short</h1>
         <h3>Aspiring Web Developer</h3>
-        <a href="Documents/JasonShortCV.pdf" download="Jason_Short_CV">
+        <a href="documents/JasonShortCV.pdf" download="Jason_Short_CV">
           <button class="button button--one">Download CV</button>
         </a>  
       </div>
@@ -101,9 +101,9 @@
         <h2 class="projects__title" id="projects">Projects</h2>
         <p class="projects__text">I'm at the very beginning of my coding journey, but will be adding more projects soon!</p>
         <div class="projects-inner flex--row">
-          <a href="Blackjack/index.html" target="_blank">
+          <a href="blackjack/index.html" target="_blank">
             <div class="project-tile project-tile--green flex--column">
-              <img src="Images/BlackjackScreenshot.png" alt="Blackjack Game">
+              <img src="images/BlackjackScreenshot.png" alt="Blackjack Game">
               <div class="project-tile__overlay"> 
                 <p class="project-tile-text">(In Progress) A blackjack game, created to practice javascript fundamentals, including functions, objects and loops.</p>
               </div>
@@ -111,7 +111,7 @@
           </a>
           <a href="https://codepen.io/Jaydinho/pen/wZWZLy" target="_blank">
             <div class="project-tile">
-              <img src="Images/ExerciseTimerScreenshot.png" alt="Excercise Timer">
+              <img src="images/ExerciseTimerScreenshot.png" alt="Excercise Timer">
               <div class="project-tile__overlay" > 
                 <p class="project-tile-text" >Displays a list of random exercises with a countdown clock. User can select the number of exercises and duration.</p>
               </div>
