--- a/Blackjack/index.html
+++ b/Blackjack/index.html
@@ -23,7 +23,7 @@
                 <div id="dealer-card-images"></div>
                 <div id="dealer-card-images-original">
                     <img id="dealer-card-image-one" src="">
-                    <img id="dealer-card-image-two" src="Images/CardBack.png">
+                    <img id="dealer-card-image-two" src="images/CardBack.png">
                 </div>    
                 <div id="dealer-score" class="score"></div>
             </div>
