Update - Design tools list

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             <p class="skills__subtitle">Design Tools used:</p>
             <ul>
               <li class="skills__list">Balsamiq</li>
-              <li class="skills__list">Sublime</li>
               <li class="skills__list">Adobe Creative Cloud</li>
               <li class="skills__list">Visio</li>
+              <li class="skills__list">Camtasia</li>
             </ul>
           </div>
         </div>
