--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
   <title>
     Jason Short
   </title>
+
   <meta name="Description" content="Personal portfolio of Jason Short, front end web developer.">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,6 +15,7 @@
   <link rel="shortcut icon" href="./images/favicon.ico"/>
   <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+
   <script src="https://kit.fontawesome.com/084fdc9c62.js"></script>
 </head>
 
@@ -151,6 +152,7 @@
       <i class="fab fa-codepen icon icon--footer"></i>
     </a>
     </div>
+    <p class="footer__name">&copy; Jason Short 2019</p>
   </footer>
   
 </body>
