Update - Flexbox center align fix

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
         <h2 id="skills"></h2>
         <div class="skills flex--row flex--centered">
-          <div class="skills__column skills__column--first flex--column">
+          <div class="skills__column skills__column--first flex--column flex--centered">
             <i class="far fa-file-code icon"></i>
             <p class="skills__title">HTML/CSS</p>
             <p class="skills__subtitle">What I know so far:</p>
