--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <li class="skills__list">Bootstrap</li>
             </ul>
           </div>
-          <div class="skills__column skills__column--middle flex--column">
+          <div class="skills__column skills__column--middle flex--column flex--centered">
             <i class="fab fa-js-square icon"></i>
             <p class="skills__title">JavaScript</p>
             <p class="skills__subtitle">What I know so far:</p>
@@ -86,7 +86,7 @@
               <li class="skills__list">jQuery</li>
              </ul> 
             </div>
-          <div class="skills__column skills__column--last skills__column--right flex--column">
+          <div class="skills__column skills__column--last flex--column flex--centered">
               <i class="fas fa-tools icon icon--tools"></i>
             <p class="skills__title">Tools</p>
             <p class="skills__subtitle">Dev software used:</p>
