--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <link rel="stylesheet" href="./css/global.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-  <link rel="shortcut icon" href="./images/favicon.ico"/>
+  <link rel="shortcut icon" href="./images/MyFavicon.ico" type="image/x-icon"/>
 
   <script src="https://kit.fontawesome.com/084fdc9c62.js"></script>
 </head>
