Update - Added Github link

--- a/index.html
+++ b/index.html
@@ -158,10 +158,14 @@
     <a class="footer__link" href="https://www.freecodecamp.org/jaydinho" target="_blank">
       <i class="fab fa-free-code-camp icon icon--footer"></i>
     </a>
+    <a class="footer__link" href="https://github.com/jaydinho" target="_blank">
+      <i class="fab fa-github icon icon--footer"></i>
+    </a>
     <a class="footer__link" href="https://codepen.io/Jaydinho/" target="_blank">
       <i class="fab fa-codepen icon icon--footer"></i>
     </a>
     </div>
+
     <p class="footer__name">&copy; Jason Short 2019</p>
   </footer>
   
