Update - Image Fix

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
           <div class="flex--column">
             <h2>Hi, I'm Jason. Nice to meet you.</h2>
             <h4 class="about__text">Having worked as a Technical Author in a software development team over the last two years, I've developed a passion for great user experience and clean, simple design.</h4>
+            <!--<a href="mailto:jasonshort1990@gmail.com?Subject=Job%20Offer" target="_top">
+                <button class="button button--one">Get in Touch</button>
+            </a>
+            -->
           </div>
           <img src="images/AboutPhoto.jpeg" alt="Jason Short Photo" class="about__image flex--centered">
       </div>
